include/maplibre_native_c/map.h


typedef struct mln_map_options {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint32_t map_mode;
  bool fast_pfor_enabled;
} mln_map_options;
typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
typedef struct mln_camera_options {
  uint32_t size;
  uint32_t fields;
  double latitude;
  double longitude;
  double center_altitude;
  mln_edge_insets padding;
  mln_screen_point anchor;
  double zoom;
  double bearing;
  double pitch;
  double roll;
  double field_of_view;
} mln_camera_options;
typedef struct mln_unit_bezier {
  double x1;
  double y1;
  double x2;
  double y2;
} mln_unit_bezier;
typedef struct mln_animation_options {
  uint32_t size;
  uint32_t fields;
  double duration_ms;
  double velocity;
  double min_zoom;
  mln_unit_bezier easing;
  uint64_t transition_id;
} mln_animation_options;
typedef struct mln_vec3 {
  double x;
  double y;
  double z;
} mln_vec3;
typedef struct mln_quaternion {
  double x;
  double y;
  double z;
  double w;
} mln_quaternion;
typedef struct mln_free_camera_options {
  uint32_t size;
  uint32_t fields;
  mln_vec3 position;
  mln_quaternion orientation;
} mln_free_camera_options;
typedef struct mln_lat_lng {
  double latitude;
  double longitude;
} mln_lat_lng;
typedef struct mln_string_view {
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_json_value mln_json_value;
typedef struct mln_geometry mln_geometry;
typedef struct mln_coordinate_span {
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
typedef struct mln_polygon_geometry {
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
typedef struct mln_multi_line_geometry {
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
typedef struct mln_multi_polygon_geometry {
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
typedef struct mln_geometry_collection {
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
typedef struct mln_geometry {
  uint32_t size;
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
typedef struct mln_json_array {
  const mln_json_value* values;
  size_t value_count;
} mln_json_array;
typedef struct mln_json_object {
  const mln_json_member* members;
  size_t member_count;
} mln_json_object;
typedef struct mln_json_value {
  uint32_t size;
  uint32_t type;
  union {
    bool bool_value;
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
    mln_json_array array_value;
    mln_json_object object_value;
  } data;
} mln_json_value;
typedef struct mln_feature {
  uint32_t size;
  const mln_geometry* geometry;
  const mln_json_member* properties;
  size_t property_count;
  uint32_t identifier_type;
  union {
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
  } identifier;
} mln_feature;
typedef struct mln_feature_collection {
  const mln_feature* features;
  size_t feature_count;
} mln_feature_collection;
typedef struct mln_geojson {
  uint32_t size;
  uint32_t type;
  union {
    const mln_geometry* geometry;
    const mln_feature* feature;
    mln_feature_collection feature_collection;
  } data;
} mln_geojson;
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;
typedef struct mln_bound_options {
  uint32_t size;
  uint32_t fields;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  double min_pitch;
  double max_pitch;
} mln_bound_options;
typedef struct mln_projection_mode {
  uint32_t size;
  uint32_t fields;
  bool axonometric;
  double x_skew;
  double y_skew;
} mln_projection_mode;
MLN_API mln_map_options mln_map_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_map_request_repaint(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status mln_map_request_still_image(mln_map map) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_set_style_json(mln_map map, const char* json) MLN_NOEXCEPT;