include/maplibre_native_c/camera.h


MLN_API mln_status
mln_map_set_debug_options(mln_map map, uint32_t options) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_rendering_stats_view_enabled(
  mln_map map, bool enabled
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_jump_to(mln_map map, const mln_camera_options* camera) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_move_by(mln_map map, double delta_x, double delta_y) MLN_NOEXCEPT;
MLN_API mln_status mln_map_move_by_animated(
  mln_map map, double delta_x, double delta_y,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_scale_by(
  mln_map map, double scale, const mln_screen_point* anchor
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_scale_by_animated(
  mln_map map, double scale, const mln_screen_point* anchor,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_rotate_by(
  mln_map map, mln_screen_point first, mln_screen_point second
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_rotate_by_animated(
  mln_map map, mln_screen_point first, mln_screen_point second,
  const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_pitch_by(mln_map map, double pitch) MLN_NOEXCEPT;
MLN_API mln_status mln_map_pitch_by_animated(
  mln_map map, double pitch, const mln_animation_options* animation
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_set_gesture_in_progress(mln_map map, bool in_progress) MLN_NOEXCEPT;
MLN_API mln_status mln_map_lat_lng_bounds_for_camera(
  mln_map map, const mln_camera_options* camera, mln_lat_lng_bounds* out_bounds
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_lat_lng_bounds_for_camera_unwrapped(
  mln_map map, const mln_camera_options* camera, mln_lat_lng_bounds* out_bounds
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_set_bounds(mln_map map, const mln_bound_options* options) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_free_camera_options(
  mln_map map, const mln_free_camera_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_projection_mode(
  mln_map map, const mln_projection_mode* mode
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_pixel_for_lat_lng(
  mln_map map, mln_lat_lng coordinate, mln_screen_point* out_point
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_lat_lng_for_pixel(
  mln_map map, mln_screen_point point, mln_lat_lng* out_coordinate
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_pixels_for_lat_lngs(
  mln_map map, const mln_lat_lng* coordinates, size_t coordinate_count,
  mln_screen_point* out_points
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_lat_lngs_for_pixels(
  mln_map map, const mln_screen_point* points, size_t point_count,
  mln_lat_lng* out_coordinates
) MLN_NOEXCEPT;