bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_camera_options>)>()
external int mln_map_jump_to(int map, ffi.Pointer<mln_camera_options> camera);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_camera_options>,
    ffi.Pointer<mln_lat_lng_bounds>,
  )
>()
external int mln_map_lat_lng_bounds_for_camera(
  int map,
  ffi.Pointer<mln_camera_options> camera,
  ffi.Pointer<mln_lat_lng_bounds> out_bounds,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_camera_options>,
    ffi.Pointer<mln_lat_lng_bounds>,
  )
>()
external int mln_map_lat_lng_bounds_for_camera_unwrapped(
  int map,
  ffi.Pointer<mln_camera_options> camera,
  ffi.Pointer<mln_lat_lng_bounds> out_bounds,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_screen_point, ffi.Pointer<mln_lat_lng>)
>()
external int mln_map_lat_lng_for_pixel(
  int map,
  mln_screen_point point,
  ffi.Pointer<mln_lat_lng> out_coordinate,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_screen_point>,
    ffi.Size,
    ffi.Pointer<mln_lat_lng>,
  )
>()
external int mln_map_lat_lngs_for_pixels(
  int map,
  ffi.Pointer<mln_screen_point> points,
  int point_count,
  ffi.Pointer<mln_lat_lng> out_coordinates,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_style_id_list>)>()
external int mln_map_list_style_layer_ids(
  int map,
  ffi.Pointer<mln_style_id_list> out_layer_ids,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_style_id_list>)>()
external int mln_map_list_style_source_ids(
  int map,
  ffi.Pointer<mln_style_id_list> out_source_ids,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Double, ffi.Double)>()
external int mln_map_move_by(int map, double delta_x, double delta_y);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Double,
    ffi.Double,
    ffi.Pointer<mln_animation_options>,
  )
>()
external int mln_map_move_by_animated(
  int map,
  double delta_x,
  double delta_y,
  ffi.Pointer<mln_animation_options> animation,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, mln_string_view)>()
external int mln_map_move_style_layer(
  int map,
  mln_string_view layer_id,
  mln_string_view before_layer_id,
);

@ffi.Native<mln_map_options Function()>()
external mln_map_options mln_map_options_default();

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Double)>()
external int mln_map_pitch_by(int map, double pitch);

@ffi.Native<
  ffi.Int32 Function(mln_map, ffi.Double, ffi.Pointer<mln_animation_options>)
>()
external int mln_map_pitch_by_animated(
  int map,
  double pitch,
  ffi.Pointer<mln_animation_options> animation,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_lat_lng, ffi.Pointer<mln_screen_point>)
>()
external int mln_map_pixel_for_lat_lng(
  int map,
  mln_lat_lng coordinate,
  ffi.Pointer<mln_screen_point> out_point,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Pointer<mln_lat_lng>,
    ffi.Size,
    ffi.Pointer<mln_screen_point>,
  )
>()
external int mln_map_pixels_for_lat_lngs(
  int map,
  ffi.Pointer<mln_lat_lng> coordinates,
  int coordinate_count,
  ffi.Pointer<mln_screen_point> out_points,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_map_projection>)>()
external int mln_map_projection_create(
  int map,
  ffi.Pointer<mln_map_projection> out_projection,
);

@ffi.Native<ffi.Int32 Function(mln_map_projection)>()
external int mln_map_projection_destroy(int projection);

@ffi.Native<
  ffi.Int32 Function(mln_map_projection, ffi.Pointer<mln_camera_options>)
>()
external int mln_map_projection_get_camera(
  int projection,
  ffi.Pointer<mln_camera_options> out_camera,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map_projection,
    mln_screen_point,
    ffi.Pointer<mln_lat_lng>,
  )
>()
external int mln_map_projection_lat_lng_for_pixel(
  int projection,
  mln_screen_point point,
  ffi.Pointer<mln_lat_lng> out_coordinate,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map_projection,
    mln_lat_lng,
    ffi.Pointer<mln_screen_point>,
  )
>()
external int mln_map_projection_pixel_for_lat_lng(
  int projection,
  mln_lat_lng coordinate,
  ffi.Pointer<mln_screen_point> out_point,
);

@ffi.Native<
  ffi.Int32 Function(mln_map_projection, ffi.Pointer<mln_camera_options>)
>()
external int mln_map_projection_set_camera(
  int projection,
  ffi.Pointer<mln_camera_options> camera,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map_projection,
    ffi.Pointer<mln_lat_lng>,
    ffi.Size,
    mln_edge_insets,
  )
>()
external int mln_map_projection_set_visible_coordinates(
  int projection,
  ffi.Pointer<mln_lat_lng> coordinates,
  int coordinate_count,
  mln_edge_insets padding,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map_projection,
    ffi.Pointer<mln_geometry>,
    mln_edge_insets,
  )
>()
external int mln_map_projection_set_visible_geometry(
  int projection,
  ffi.Pointer<mln_geometry> geometry,
  mln_edge_insets padding,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<ffi.Bool>)
>()
external int mln_map_remove_style_image(
  int map,
  mln_string_view image_id,
  ffi.Pointer<ffi.Bool> out_removed,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<ffi.Bool>)
>()
external int mln_map_remove_style_layer(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<ffi.Bool> out_removed,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<ffi.Bool>)
>()
external int mln_map_remove_style_source(
  int map,
  mln_string_view source_id,
  ffi.Pointer<ffi.Bool> out_removed,
);

@ffi.Native<ffi.Int32 Function(mln_map)>()
external int mln_map_request_repaint(int map);

@ffi.Native<ffi.Int32 Function(mln_map)>()
external int mln_map_request_still_image(int map);

@ffi.Native<ffi.Int32 Function(mln_map, mln_screen_point, mln_screen_point)>()
external int mln_map_rotate_by(
  int map,
  mln_screen_point first,
  mln_screen_point second,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_screen_point,
    mln_screen_point,
    ffi.Pointer<mln_animation_options>,
  )
>()
external int mln_map_rotate_by_animated(
  int map,
  mln_screen_point first,
  mln_screen_point second,
  ffi.Pointer<mln_animation_options> animation,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, ffi.Double, ffi.Pointer<mln_screen_point>)
>()
external int mln_map_scale_by(
  int map,
  double scale,
  ffi.Pointer<mln_screen_point> anchor,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    ffi.Double,
    ffi.Pointer<mln_screen_point>,
    ffi.Pointer<mln_animation_options>,
  )
>()
external int mln_map_scale_by_animated(
  int map,
  double scale,
  ffi.Pointer<mln_screen_point> anchor,
  ffi.Pointer<mln_animation_options> animation,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_bound_options>)>()
external int mln_map_set_bounds(
  int map,
  ffi.Pointer<mln_bound_options> options,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    mln_canonical_tile_id,
    ffi.Pointer<mln_geojson>,
  )
>()
external int mln_map_set_custom_geometry_source_tile_data(
  int map,
  mln_string_view source_id,
  mln_canonical_tile_id tile_id,
  ffi.Pointer<mln_geojson> data,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Uint32)>()
external int mln_map_set_debug_options(int map, int options);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_free_camera_options>)>()
external int mln_map_set_free_camera_options(
  int map,
  ffi.Pointer<mln_free_camera_options> options,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<mln_geojson>)
>()
external int mln_map_set_geojson_source_data(
  int map,
  mln_string_view source_id,
  ffi.Pointer<mln_geojson> data,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, mln_string_view)>()
external int mln_map_set_geojson_source_url(
  int map,
  mln_string_view source_id,
  mln_string_view url,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Bool)>()
external int mln_map_set_gesture_in_progress(int map, bool in_progress);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_lat_lng>,
    ffi.Size,
  )
>()
external int mln_map_set_image_source_coordinates(
  int map,
  mln_string_view source_id,
  ffi.Pointer<mln_lat_lng> coordinates,
  int coordinate_count,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_premultiplied_rgba8_image>,
  )
>()
external int mln_map_set_image_source_image(
  int map,
  mln_string_view source_id,
  ffi.Pointer<mln_premultiplied_rgba8_image> image,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, mln_string_view)>()
external int mln_map_set_image_source_url(
  int map,
  mln_string_view source_id,
  mln_string_view url,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Pointer<mln_json_value>)
>()
external int mln_map_set_layer_filter(
  int map,
  mln_string_view layer_id,
  ffi.Pointer<mln_json_value> filter,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, ffi.Double)>()
external int mln_map_set_layer_max_zoom(
  int map,
  mln_string_view layer_id,
  double max_zoom,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, ffi.Double)>()
external int mln_map_set_layer_min_zoom(
  int map,
  mln_string_view layer_id,
  double min_zoom,
);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    mln_string_view,
    ffi.Pointer<mln_json_value>,
  )
>()
external int mln_map_set_layer_property(
  int map,
  mln_string_view layer_id,
  mln_string_view property_name,
  ffi.Pointer<mln_json_value> value,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, mln_string_view)>()
external int mln_map_set_layer_source_id(
  int map,
  mln_string_view layer_id,
  mln_string_view source_id,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, mln_string_view)>()
external int mln_map_set_layer_source_layer(
  int map,
  mln_string_view layer_id,
  mln_string_view source_layer,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, ffi.Uint32)>()
external int mln_map_set_layer_visibility(
  int map,
  mln_string_view layer_id,
  int visibility,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, ffi.Double)>()
external int mln_map_set_location_indicator_accuracy_radius(
  int map,
  mln_string_view layer_id,
  double radius,
);

@ffi.Native<ffi.Int32 Function(mln_map, mln_string_view, ffi.Double)>()
external int mln_map_set_location_indicator_bearing(
  int map,
  mln_string_view layer_id,
  double bearing,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, ffi.Uint32, mln_string_view)
>()
external int mln_map_set_location_indicator_image_name(
  int map,
  mln_string_view layer_id,
  int image_kind,
  mln_string_view image_id,
);

@ffi.Native<
  ffi.Int32 Function(mln_map, mln_string_view, mln_lat_lng, ffi.Double)
>()
external int mln_map_set_location_indicator_location(
  int map,
  mln_string_view layer_id,
  mln_lat_lng coordinate,
  double altitude,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_projection_mode>)>()
external int mln_map_set_projection_mode(
  int map,
  ffi.Pointer<mln_projection_mode> mode,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Bool)>()
external int mln_map_set_rendering_stats_view_enabled(int map, bool enabled);

@ffi.Native<
  ffi.Int32 Function(
    mln_map,
    mln_string_view,
    ffi.Pointer<mln_premultiplied_rgba8_image>,
    ffi.Pointer<mln_style_image_options>,
  )
>()
external int mln_map_set_style_image(
  int map,
  mln_string_view image_id,
  ffi.Pointer<mln_premultiplied_rgba8_image> image,
  ffi.Pointer<mln_style_image_options> options,
);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<ffi.Char>)>()
external int mln_map_set_style_json(int map, ffi.Pointer<ffi.Char> json);

@ffi.Native<ffi.Int32 Function(mln_map, ffi.Pointer<mln_json_value>)>()
external int mln_map_set_style_light_json(
  int map,
  ffi.Pointer<mln_json_value> light_json,
);
